--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
@@ -33,13 +34,9 @@
     "@supabase/supabase-js": "^2.39.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "nestjs-supabase-auth": "^1.0.9",
+    "crypto": "^1.0.1",
+    "jest-mock-extended": "^3.0.5",
     "passport": "^0.7.0",
-    "passport-headerapikey": "^1.2.2",
-    "passport-http-bearer": "^1.0.1",
-    "passport-http-header-strategy": "^1.1.0",
-    "passport-httpapikey": "^1.0.0",
-    "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -53,7 +50,6 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "@types/passport-jwt": "^4.0.0",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -66,9 +62,7 @@
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
   "jest": {
